src/layouts/index.css
body {
  background-color: #fffdf7;
  margin-top: 60px;
}

/* PrismJS Theme */
code[class*='language-'],
pre[class*='language-'] {
  color: #a9bcd0;
  background: none;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  word-wrap: normal;
  line-height: 1.5;

  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;

  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

/* Code blocks */
pre[class*='language-'] {
  padding: 1em;
  margin: 0.5em 0;
  overflow: auto;
  border-radius: 0.3em;
}

:not(pre) > code[class*='language-'],
pre[class*='language-'] {
  background: #081A20;
  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.2);
}

/* Inline code */
:not(pre) > code[class*='language-'] {
  padding: 0.1em;
  border-radius: 0.3em;
  white-space: normal;
}

.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
  color: #27667D;
}

.token.punctuation {
  color: #A9BCD0;
}

.namespace {
  opacity: 0.7;
}

.token.property {
  color: #c6a7ab;
}

.token.tag,
.token.constant,
.token.deleted {
  color: #c52830;
}

.token.symbol {
  color: #632f44;
}

.token.boolean,
.token.number {
  color: #ae81ff;
}

.token.string {
  color: #ecc6b8;
}

.token.selector,
.token.attr-name,
.token.char,
.token.builtin,
.token.inserted {
  color: #3a8f2b;
}

.token.operator {
  color: #cce6f4;
}

.token.entity,
.token.url,
.language-css .token.string,
.style .token.string,
.token.variable {
  color: #0b9eb5;
}

.token.atrule,
.token.attr-value,
.token.function {
  color: #5dd39e;
}

.token.keyword {
  color: #fb3640;
}

.token.regex,
.token.important {
  color: #c52830;
}

.token.important,
.token.bold {
  font-weight: bold;
}

.token.italic {
  font-style: italic;
}

.token.entity {
  cursor: help;
}

/* pre.language-bash {
  color: #805330;
}
 */

